@@ -1,7 +1,3 @@
-Remove ComposedDistribution in some future version
-Remove ComposedCopula in some future version
-Remove NegativeBinomial alias in some future version
-Remove NegativeBinomialFactory alias in some future version
 Remove Analytical.set/getPhysicalStartingPoint in some future version
 Remove Wilks in some future version
 Remove deprecated method DistributionFactory.setKnownParameter(Point, Indices)
