@@ -169,20 +169,6 @@ private:
 
 }; /* class BlockIndependentCopula */
 
-// @deprecated
-class OT_API ComposedCopula
-  : public BlockIndependentCopula
-{
-  CLASSNAME
-public:
-  ComposedCopula()
-    : BlockIndependentCopula() {}
-
-  /** Default constructor */
-  explicit ComposedCopula(const DistributionCollection & coll)
-    : BlockIndependentCopula(coll) {}
-};
-
 END_NAMESPACE_OPENTURNS
 
 #endif /* OPENTURNS_BLOCKINDEPENDENTCOPULA_HXX */
