@@ -103,7 +103,7 @@ gSobolFunction.setOutputDescription(["Y"])
 
 # Define the distribution
 distributionList = [ot.Uniform(0.0, 1.0) for i in range(dimension)]
-distribution = ot.ComposedDistribution(distributionList)
+distribution = ot.JointDistribution(distributionList)
 
 # Compute Mean
 gSobolMean = 1.0
